# markdown_webscraper_mcp

./: LLM.md  README.md  config.json  pyproject.toml
src/markdown_webscraper_mcp/: __init__.py  cli.py  config.py  server.py  service.py
tests/integration/: test_mcp_live_scrape.py
tests/unit/: test_config.py  test_server.py  test_service.py
